fixed alignment issue

--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,12 @@ body {
   color: #D9D9D9;
   padding: 20px;
   height: 100vh;
+}
+
+main {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 header {
